# pyvl

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
doc/: conf.py  index.rst  sg_execution_times.rst
doc/private_c/: index.rst
doc/private_python/: index.rst
doc/public_python/: flow_conditions.rst  geometry.rst  index.rst  model_settings.rst  output_settings.rst  postprocess.rst  reference_frame.rst  solver.rst  solver_settings.rst  time_settings.rst  wake_models.rst
doc/tutorials/: index.rst
examples/: GALLERY_HEADER.rst  plot_example_1.py  plot_example_2.py  plot_example_3.py  plot_example_4.py
pytests/: test_geoid.py  test_mesh.py  test_reference_frame.py  test_rotor_rf.py  test_surface.py  test_translating_rf.py  test_wake_models.py
python/: __init__.py
python/pydust/: __init__.py  _typing.py  cdust.pyi  flow_conditions.py  geometry.py  io_common.py  reference_frames.py  settings.py  solver.py  wake.py  wake_models.py
python/pydust/fio/: __init__.py  io_common.py  io_hdf5.py  io_json.py
python/pyvl/: __init__.py  _typing.py  cvl.pyi  flow_conditions.py  geometry.py  reference_frames.py  settings.py  solver.py  wake.py  wake_models.py
python/pyvl/examples/: __init__.py  prop.msh
python/pyvl/fio/: __init__.py  io_hdf5.py  io_json.py
python/pyvl/postprocess/: __init__.py  forces.py  pressure.py  velocity.py
src/: allocator.c  allocator.h  common.h  flow_solver.h  geoidobject.c  geoidobject.h  lineobject.c  lineobject.h  mesh.c  mesh.h  meshobject.c  meshobject.h  module.c  module.h  referenceframeobject.c  referenceframeobject.h  surfaceobject.c  surfaceobject.h
src/core/: common.c  common.h  flow_solver.c  flow_solver.h  mesh.c  mesh.h  mesh_io.c  mesh_io.h  solver_state.c  solver_state.h  transformation.c  transformation.h
src/io/: mesh_io.c  mesh_io.h
test/: CMakeLists.txt  test_common.c  test_common.h  test_mesh.msh  test_mesh_io.c
test/dual/: dual_test.msh  test_dual.c  test_dual.msh  test_mesh.msh
test/from_points/: test_from_points.c  test_mesh.msh  test_to_points.c
test/induction/: test_induction.c  test_induction_same.c
test/mesh_io/: test_mesh_io.c
test/pytests/: test_geoid.py  test_line.py  test_mesh.py  test_reference_frame.py  test_rotor_rf.py  test_serialization.py  test_surface.py  test_translating_rf.py  test_wake_models.py
test/pytests/test_inputs/: cylinder.msh
